src/test/deca/syntax/valid/testPrint2.deca
// print without quotes.
// Result : Ok (for syntax)
{
    print(hello);
}
