src/test/deca/syntax/invalid/testExprWhile1.deca
// test the syntax of while
// Result : Error
// parenthèse obligatoire
{
while false {
  print("invalid");
}
